<resources>
    <string name="app_name">6-DICE</string>
    <string name="selectTheme">Select Theme</string>
    <string name="about">About...</string>
    <string name="newGame">New Game...</string>
    <string name="gameTitle">6-DICE</string>
    <string name="pleaseSelect">Please Select:</string>
    <string name="numPlayers">Number of Players:</string>
    <string name="numDice">Number of dice:</string>
    <string name="numFaces">Faces in each dice:</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="roll">ROLL</string>
    <string name="skip">SKIP TURN</string>
    <string name="rollNo">Roll#</string>
    <string name="playerNo">Player#</string>
    <string name="diceVals">Dices</string>
    <string name="total">Total</string>
    <string name="previousRolls">Roll History</string>
    <string name="sureToQuit">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="aboutInfo">Name: Binaya Bhattarai\n\nCSIS 365 Project 3\n\nAdvisor: Dr. Rhonda Ficek</string>
    <string name="reverse">Reverse</string>
    <string name="forward">Forward</string>
    <string name="turns">Next Player:</string>
    <string name="allow_skip_turn">Allow skipping turns</string>
    <string name="skip_turn_summary">This feature can be turned on to allow players to skip their turns.</string>
    <string name="display_rolls">Display Roll History</string>
    <string name="display_rolls_summary">Check this box to show previous rolls</string>
    <string name="filter_results">Filter rolls: </string>
    <string name="date">Date:</string>
    <string name="gameid">Time:</string>
    <string name="showCurrent">Current</string>
    <string name="ellipses">...</string>
    <string name="applyFilters">Show</string>
    <string name="showTotals">Show totals</string>
    <string name="rolldate">Date</string>
    <string name="deleteGame">Delete</string>
    <string name="showAllRolls">Show All</string>
    <string name="display_dbtoolbar">Display History Toolbar</string>
    <string name="display_toolbar_summary">Enable the History Toolbar to view scores from previous games.</string>
</resources>
