<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="horizontal"
    android:gravity="center_horizontal">

    <TextView
        android:textSize="22sp"
        android:text="@string/previousRolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/lblRollCount" />

    <LinearLayout
        android:id="@+id/dbToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <TextView
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filterDate" />
        <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btnChangeDate"
            android:text="@string/ellipses"/>
        <!--android:background="@color/bg_color"-->
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameid"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12sp"
            android:id="@+id/spnGameID"/>
        <Button
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnApplyFilters"
            android:text="@string/applyFilters"/>
        <Button
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDeleteGame"
            android:text="@string/deleteGame"/>
        <Button
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClearFilters"
            android:text="@string/showAllRolls"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/rollNo"/>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/playerNo"/>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/diceVals"/>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total"/>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/dateHeader"
            android:text="@string/rolldate"/>
        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/gameIdHeader"
            android:layout_height="wrap_content"
            android:text="@string/gameid"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reclViewRolls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:scrollbars="vertical">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>